@@ -1,6 +1,5 @@
 package com.datahub.authorization;
 
-import java.util.Collections;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.function.Function;
@@ -21,7 +20,7 @@ public class FieldResolver {
   @Getter(lazy = true)
   private final CompletableFuture<FieldValue> fieldValuesFuture = resolveField.get();
 
-  private static final FieldValue EMPTY = new FieldValue(Collections.emptySet());
+  private static final FieldValue EMPTY = new FieldValue(Set.of());
 
   /** Helper function that returns FieldResolver for precomputed values */
   public static FieldResolver getResolverFromValues(Set<String> values) {
